# tickler

./: .editorconfig  .gitignore  pyproject.toml
admin_tickler/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
admin_tickler/migrations/: 0001_initial.py
server/: settings.py  urls.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
